# lumina

./: .gitignore  back.sh  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  test_db.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_19_1728-910b5fc6b6fa_initial_database_schema_all_models.py  2025_12_21_0621-81ca93297f68_make_plan_id_nullable_and_add_custom_.py  2026_05_23_1115-6004b0543c73_add_partners_table.py  2026_07_22_1052-7d26f6e131b1_add_expression_orale_attempts.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/modules/ai_credit_purchases/: __init__.py  controller.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/analytics/: __init__.py  controller.py  models.py  schemas.py
backend/app/modules/auth/: __init__.py  controller.py  dependencies.py  schemas.py  service.py
backend/app/modules/comprehension_answers/: __init__.py  models.py  repository.py
backend/app/modules/corrections/: __init__.py  ai_corrector.py  prompts.py
backend/app/modules/exam_attempts/: __init__.py  controller.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/expression_orale/: __init__.py  controller.py  dependencies.py  grading.py  live_client.py  (+5 more)
backend/app/shared/: constants.py  dependencies.py
backend/app/storage/: __init__.py  audio_handler.py  file_manager.py
backend/app/tasks/: __init__.py  audio_cleanup.py  celery_app.py
backend/scripts/: __init__.py  create_admin.py  seed_ai_credit_packs.py  seed_db.py
(+701 files in other folders)
